<resources>
    <string name="app_name">Tamal Social Bank take 1</string>
    <string name="tamal_social_bank">הבנק החברתי למזון תינוקות</string>
    <string name="donate_food">לתרומת מזון</string>
    <string name="donate_money">לתרומת כסף</string>
    <string name="got_it_thanks">הבנתי</string>
    <string name="dial_now">חייג עכשיו</string>
    <string name="leave_details">השאר פרטים</string>
    <string name="fast_donation">תרומה מהירה</string>
    <string name="stories">סיפורים</string>
    <string name="login">התחבר</string>
    <string name="buy_points">נקודות קניה</string>
    <string name="scan_barcode">לסריקת ברקוד</string>
    <string name="pick_from_list">בחר מרשימה</string>
    <string name="to_scan_the_barcode">סרוק ברקוד</string>
    <string name="cell_phone">נייד</string>
    <string name="send">שלח</string>
    <string name="street_and_number">רחוב ומספר</string>
    <string name="phone">טלפון</string>
    <string name="add_new_delivery_guy">הוסף שליח חדש</string>
    <string name="code">קוד</string>
    <string name="send_code">שלח קוד</string>
    <string name="reset_code">איפוס קוד</string>
    <string name="full_name">שם מלא</string>
    <string name="city">עיר</string>
    <string name="update">עדכן</string>
    <string name="food_capacity">קיבולת מזון:</string>
    <string name="logo">Logo</string>
    <string name="you_chose_to_drop_your_donation_in_this_center">בחרת להוריד תרומה בנקודת מסירה</string>
    <string name="this_products">את המוצרים:</string>
    <string name="choose_center_to_drop_off_donation">בחר נקודה להורדת התרומה</string>
    <string name="explain_the_donation_process">explain the donation process</string>
    <string name="pick_return_hour">בחירת שעה לחזרה</string>
    <string name="enter_code">הכנס קוד כניסה</string>
    <string name="center_name">שם נקודת האיסוף</string>


    <string-array name="pick_up_hours">
        <item>8:00-10:00</item>
        <item>10:00-12:00</item>
        <item>12:00-14:00</item>
        <item>14:00-16:00</item>
        <item>16:00-18:00</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_delivery_guy_destionations">DeliveryGuyDestionations</string>
    <string name="tab_text_10">חדשות</string>
    <string name="tab_text_11">במשלוח</string>
    <string name="tab_text_12">הסתיימו</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_storage_donations">StorageDonationsActivity</string>
    <string name="title_activity_storage_requests">StorageRequestsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="in_inventory">כרגע במלאי:</string>
    <string name="product_capacity">קיבולת למוצר:</string>
    <string name="request_status">סטטוס הזמנה:</string>
    <string name="wanted_hours">שעות רצויות:</string>
</resources>
