<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"

    tools:context="com.guzman.rotem.tamalsocialbank1.donor.BookDelivery">


    <android.support.constraint.Guideline
        android:id="@+id/gh48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


    <EditText
        android:id="@+id/etFullName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/round_details_edit_text"
        android:ems="10"
        android:fontFamily="@font/varela_round"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:gravity="right|center"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline109"
        app:layout_constraintEnd_toStartOf="@+id/guideline104"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline105"
        app:layout_constraintTop_toTopOf="@+id/gh3" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/round_details_edit_text"
        android:ems="10"
        android:fontFamily="@font/varela_round"
        android:hint="@string/cell_phone"
        android:inputType="phone"
        android:gravity="right|center"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10411"
        app:layout_constraintEnd_toStartOf="@+id/guideline104"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="@+id/guideline105"
        app:layout_constraintTop_toTopOf="@+id/gh48"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/send_button"
        android:fontFamily="@font/varela_round"
        android:text="@string/send"
        android:textColor="#fff"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline1041"
        app:layout_constraintEnd_toStartOf="@+id/guideline104"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline105"
        app:layout_constraintTop_toTopOf="@+id/guideline1071" />

    <Spinner
        android:id="@+id/spnrPickHour"
        style="@style/SpinnerItem"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/pick_hour_spinner"
        android:entries="@array/pick_up_hours"
        android:padding="10dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline1061"
        app:layout_constraintEnd_toStartOf="@+id/guideline104"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline105"
        app:layout_constraintTop_toTopOf="@+id/guideline1051" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/round_details_edit_text"
        android:ems="10"
        android:fontFamily="@font/varela_round"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:gravity="right|center"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline107"
        app:layout_constraintEnd_toStartOf="@+id/guideline104"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline105"
        app:layout_constraintTop_toTopOf="@+id/guideline108"
        app:layout_constraintVertical_bias="0.75" />

    <EditText
        android:id="@+id/etStreetAndNumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/round_details_edit_text"
        android:ems="10"
        android:fontFamily="@font/varela_round"
        android:hint="@string/street_and_number"
        android:inputType="textPersonName"
        android:gravity="right|center"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10511"
        app:layout_constraintEnd_toStartOf="@+id/guideline104"
        app:layout_constraintStart_toStartOf="@+id/guideline105"
        app:layout_constraintTop_toTopOf="@+id/guideline106" />

    <android.support.constraint.Guideline
        android:id="@+id/gh3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline1041"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline1051"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline1061"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline1071"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10411"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10511"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline106"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline107"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline108"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline109"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline104"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline105"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />


</android.support.constraint.ConstraintLayout>


