<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.guzman.rotem.tamalsocialbank1.MainActivity">



    <TextView
        android:id="@+id/tvCompanyName"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:fontFamily="@font/varela_round"
        android:gravity="center"
        android:text="@string/tamal_social_bank"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/gh33"
        app:layout_constraintEnd_toEndOf="@+id/gv24"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toEndOf="@+id/gv76"
        app:layout_constraintTop_toTopOf="@+id/gh17"
        app:layout_constraintVertical_bias="0.045" />

    <android.support.constraint.Guideline
        android:id="@+id/gv50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/gh17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <android.support.constraint.Guideline
        android:id="@+id/gh33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <android.support.constraint.Guideline
        android:id="@+id/gh48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <android.support.constraint.Guideline
        android:id="@+id/gh80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />


    <android.support.constraint.Guideline
        android:id="@+id/gh54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />

    <android.support.constraint.Guideline
        android:id="@+id/gh65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />


    <ImageView
        android:id="@+id/ivLogo"
        android:contentDescription="@string/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/gh17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/asset_52_all" />

    <android.support.constraint.Guideline
        android:id="@+id/gv38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.39" />

    <android.support.constraint.Guideline
        android:id="@+id/gv24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.11" />

    <android.support.constraint.Guideline
        android:id="@+id/gv76"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.76" />

    <Button
        android:id="@+id/btnFastDonation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/main_buttons"
        android:drawableLeft="@drawable/half_main_buttons"
        android:drawableTint="@color/colorHalfButtonGrey"
        android:text="@string/fast_donation"
        app:layout_constraintBottom_toTopOf="@+id/gh48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gh33"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnStories"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/main_buttons"
        android:drawableLeft="@drawable/half_main_buttons"
        android:drawableTint="@color/colorHalfButtonGrey"
        android:fontFamily="@font/varela_round"
        android:text="@string/stories"
        android:textColor="@color/colorPrimaryTextWhite"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/gh65"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gh54" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/main_buttons"
        android:drawableLeft="@drawable/half_main_buttons"
        android:drawableTint="@color/colorHalfButtonBlue"
        android:fontFamily="@font/varela_round"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryTextWhite"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/gh82"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gh71" />

    <android.support.constraint.Guideline
        android:id="@+id/gh71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <android.support.constraint.Guideline
        android:id="@+id/gh82"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="3dp"
        app:layout_constraintBottom_toTopOf="@+id/gh48"
        app:layout_constraintEnd_toStartOf="@+id/gv38"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="@+id/gv24"
        app:layout_constraintTop_toTopOf="@+id/gh33"
        app:srcCompat="@drawable/asset_57_s_22" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toTopOf="@+id/gh65"
        app:layout_constraintEnd_toStartOf="@+id/gv38"
        app:layout_constraintStart_toStartOf="@+id/gv24"
        app:layout_constraintTop_toTopOf="@+id/gh54"
        app:srcCompat="@drawable/asset_58_s_22" />


</android.support.constraint.ConstraintLayout>
