<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.guzman.rotem.tamalsocialbank1.AdminDeliveryGuysEditActivity">

    <Button
        android:id="@+id/btnSendCode"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/asset111"
        app:layout_constraintBottom_toTopOf="@+id/gh15"
        app:layout_constraintEnd_toStartOf="@+id/gv25"
        app:layout_constraintStart_toStartOf="@+id/gv10"
        app:layout_constraintTop_toTopOf="@+id/gh5" />

    <EditText
        android:id="@+id/etCode"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/asset110"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/code"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/gh15"
        app:layout_constraintEnd_toStartOf="@+id/gv90"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/gv50"
        app:layout_constraintTop_toTopOf="@+id/gh5" />

    <Button
        android:id="@+id/btnCodeReset"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/asset112"
        app:layout_constraintBottom_toTopOf="@+id/gh15"
        app:layout_constraintEnd_toStartOf="@+id/gv45"
        app:layout_constraintStart_toStartOf="@+id/gv30"
        app:layout_constraintTop_toTopOf="@+id/gh5"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/asset113"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline53"
        app:layout_constraintEnd_toStartOf="@+id/guideline62"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline64"
        app:layout_constraintTop_toTopOf="@+id/gh5"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/asset113"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/cell_phone"
        android:inputType="phone"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/gv10"
        app:layout_constraintEnd_toStartOf="@+id/guideline62"
        app:layout_constraintStart_toStartOf="@+id/guideline64"
        app:layout_constraintTop_toTopOf="@+id/gv90"
        app:layout_constraintVertical_bias="0.333" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/asset114"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline57"
        app:layout_constraintEnd_toStartOf="@+id/guideline62"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline64"
        app:layout_constraintTop_toTopOf="@+id/guideline56"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etStreetAndNumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/asset114"
        android:ems="10"
        android:hint="@string/street_and_number"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline59"
        app:layout_constraintEnd_toStartOf="@+id/guideline62"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline64"
        app:layout_constraintTop_toTopOf="@+id/guideline58" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/asset116"
        app:layout_constraintBottom_toTopOf="@+id/guideline61"
        app:layout_constraintEnd_toStartOf="@+id/guideline62"
        app:layout_constraintStart_toStartOf="@+id/guideline64"
        app:layout_constraintTop_toTopOf="@+id/guideline60" />

    <android.support.constraint.Guideline
        android:id="@+id/gh5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/gh15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/gh20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/gh30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/gh35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.Guideline
        android:id="@+id/gh45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <android.support.constraint.Guideline
        android:id="@+id/gh50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/gh60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.constraint.Guideline
        android:id="@+id/gh75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:id="@+id/gh65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <android.support.constraint.Guideline
        android:id="@+id/gh80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.constraint.Guideline
        android:id="@+id/gh90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9041096" />

    <android.support.constraint.Guideline
        android:id="@+id/gv90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/gv10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/gv50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/gv45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <android.support.constraint.Guideline
        android:id="@+id/gv30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/gv25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

</android.support.constraint.ConstraintLayout>
